@@ -589,6 +589,7 @@ All:
 - Add wxVector::assign() (Jonas Rydberg).
 - Add wx[F]File{Input,Output}Stream::GetFile() (troelsk).
 - Add wxSocketBase::GetSocket() (Laurent Poujoulat).
+- Add IEEE 754 single/double precision support to wxDataStream classes (net147).
 - Add Nepali translation (Him Prasad Gautam).
 
 All (GUI):
